Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-05-20 (SVN):
    * cvar.c, cvar.h: Added Cvar_SetROM() and Cvar_SetValueROM() to set
      a CVAR_ROM variable from within the engine.

2011-05-20 (SVN):
    * mapfixes, tower.ent: Repositioned the bronze golem in the elevator
      so that it doesn't die immediately because of getting stuck. From
      Thomas. Updated the rpm spec file to install the new ent file.

2011-05-20 (SVN):
    * made COM_ExtractExtension to call COM_FileGetExtension.

2011-05-20 (SVN):
    * Removed S_FileExtension, replaced its use by COM_FileGetExtension.
      Adjusted all users because COM_FileGetExtension doesn't include
      the leading dot for the extension, nor does it ever return NULL.

2011-05-20 (SVN):
    * bgmusic.c: moved the commented out code to bgmusic.old so that the
      file's contents can be followed more easily.

2011-05-20 (SVN):
    * added COM_FileGetExtension to return a file's extension or empty
      string if there is none. renamed the existing COM_FileExtension
      to COM_ExtractExtension and tidied it a bit.

2011-05-19 (SVN):
    * strings.txt: Removed explicit line breaks from the cathedral holy
      pool room message at line 92: they were leading to poor alignment
      and this is in parallel to the cathedral entrance message at line
      137, too.  Patch from Sander van Dijk.

2011-05-19 (SVN):
    * gamecode, triggers.hc (trigger_interval): Reverted nexttink value
      to 0.1 for the hexen2 and the expansion pack versions.  Increased
      it further to 2.0 for hexenworld and siege versions, because 0.3
      was seen to be not enough on two old pentium3-500 and 650 machines.
      Changed documentation because this obviously not a proper fix but
      a work around.  Further work on this may (or may not) follow.

2011-05-17 (SVN):
    * gamecode, triggers.hc (trigger_interval): Fixed issue which used to